--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -9,20 +9,24 @@
     --bg-shaded: #efefef;
     --a-fg: #0077aa;
     --a-weight: 600;
-    --site-max-width: 960px;
+    /* --site-max-width: 960px; */
+    --site-max-width: 57.5rem;
     --site-min-width: 920px;
+    --body-max-width: 36rem;
+    --side-max-width: 16rem;
+    --side-padding: 2rem;
+    font-family: var(--font-sans);
+    font-size: 19px;
+    color: var(--fg);
+    background-color: var(--bg);
+    line-height: 1.25;
 }
 
 body {
-    padding: 2rem 4vw;
-    color: var(--fg);
-    background-color: var(--bg);
-    font-family: var(--font-sans);
-    font-size: 18px;
+    padding: 2rem var(--side-padding);
     max-width: var(--site-max-width);
     margin: 0 auto;
-    margin: 0 calc(max(calc(100vw - 8vw - 960px), 0em) / 2);
-    line-height: 1.25;
+    margin: 0 calc(max(calc(100vw - (2 * var(--side-padding)) - var(--site-max-width)), 0em) / 2);
 }
 
 d1 {
@@ -52,7 +56,8 @@ footer {
     display: table;
     text-align: center;
     width: 100%;
-    max-width: calc(0.8 * var(--site-max-width));
+    /* max-width: calc(0.8 * var(--site-max-width)); */
+    max-width: var(--body-max-width);
     border-top: 1px solid #ccc;
     font-size: 90%;
     margin-top: 5em;
@@ -61,16 +66,19 @@ footer {
 }
 
 #sidebar-right {
-    max-width: calc(0.6 * var(--site-min-width));
-    padding-bottom: 2em;
+    /* max-width: calc(0.6 * var(--site-min-width)); */
+    max-width: var(--body-max-width);
+    padding-bottom: 2rem;
 }
 
 #content.main-column {
-    max-width: calc(0.6 * var(--site-min-width));
+    max-width: var(--body-max-width);
+    /* max-width: calc(0.6 * var(--site-min-width)); */
 }
 
 #content.full-page {
-    max-width: calc(0.8 * var(--site-max-width));
+    /* max-width: calc(0.8 * var(--site-max-width)); */
+    max-width: var(--body-max-width);
 }
 
 /*Base Mobile Layout*/
@@ -79,16 +87,22 @@ footer {
     margin: 0 auto; }
 
 /*2 Column Layout*/
-@media only screen and (min-width: 920px) {
+@media only screen and (min-width: 64rem) {
     .wrap {
         width: var(--site-max-width);
         margin: 0 auto; }
     #content.main-column {
-        max-width: calc(0.62 * var(--site-max-width));
-        width: calc(100vw - (0.45 * var(--site-max-width)));
+        max-width: var(--body-max-width);
+        /* max-width: calc(0.62 * var(--site-max-width)); */
+        width: calc(100vw - var(--site-max-width)
+                    + var(--body-max-width) -
+                    (2 * var(--side-padding)) - 1rem);
     }
     #sidebar-right {
-        width: calc(0.3 * var(--site-max-width));
+        margin-left: calc(var(--site-max-width) -
+                          var(--body-max-width) - 16rem);
+        width: var(--side-max-width);
+        /* width: calc(0.3 * var(--site-max-width)); */
         float: right;
     }
 }
@@ -100,7 +114,7 @@ p {
 /*pub list*/
 .pub-title {
     line-height: 1.3;
-    display: inline-block;
+    display: block;
     padding-bottom: 0.5rem;
     font-weight: bold !important;
 }
@@ -110,8 +124,8 @@ p {
 
 .pub-abs {
     line-height: 1.25 !important;
-    font-size: 15px;
-    color: #323232;
+    font-size: 100%;
+    color: #000;
     text-justify: auto;
 }
 
@@ -167,13 +181,14 @@ h3 {
 }
 
 h2 {
+    line-height: 1.1;
     margin-top: 1em;
-    margin-bottom: 0.0em;
+    margin-bottom: 0.5em;
 }
 
 h1 {
     margin-top: 0.5em;
-    margin-bottom: 0.1em;
+    margin-bottom: 0.2em;
     font-size: 1.5em;
 }
 
